# demo2

./: README.md  grit_model.py  prompt.py  pyproject.toml
grit_base/: image_dense_captions.py
grit_base/grit/modeling/roi_heads/: grit_roi_heads.py
grounding_dino/: inference.py
internvideo_2_5_8B/: inference_internvideo_2_5_8B.py  run_inference.py
internvl3/: ADAPTIVE_PATCHES_FEATURE.md  VRAM_OPTIMIZATION_SUMMARY.md  inference_traffic.py  inference_with_clip.py
internvl3_5/: inference_traffic.py
models/grit_base/: image_dense_captions.py
models/grit_base/grit/modeling/roi_heads/: grit_roi_heads.py
qwen3/: inference.py
utils/: helper.py
