[project]
name = "demo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.52.1",
    "av",
    "imageio",
    "decord",
    "opencv-python==4.5.5.64",
    "bitsandbytes",
    "tqdm",
    "pandas",
    "torchvision",
    "sentencepiece",
    "timm==0.6.7",
    "einops==0.4.1",
    "accelerate",
    "mss",
    "dataclasses",
    "ftfy",
    "regex",
    "fasttext",
    "scikit-learn",
    "lvis",
    "nltk",
    "matplotlib",
    "requests",
    "anytree",
    "boto3",
    "scikit-image",
    "pyyaml",
    "inflect",
    "protobuf==3.19.4",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git@cc87e7ec",
    "torch==1.9.0+cu111",
    "torchvision==0.10.0+cu111",
    "torchaudio==0.9.0",
]
